# my_notebook

./: readme.md
Ubuntu/: readme.md
clangd/: readme.md
cmake/: readme.md
cmake/demo/ws_new/: CMakeLists.txt  build.sh
cmake/demo/ws_new/src/: CMakeLists.txt  main.cpp
cmake/demo/ws_new/src/hello/: CMakeLists.txt
cmake/demo/ws_new/src/kill/: CMakeLists.txt
conan/: readme.md
conda/: readme.md
cron/: readme.md
docker/: readme.md  vscode进入docker容器.md
flutter/: readme.md
gcovr/: readme.md
gdb/: readme.md
git/: readme.md
input_method/: readme.md
ln/: readme.md
mysql/: readme.md
others/: readme.md
plt/: readme.md
re/: demo1.py  readme.md
ssh/: readme.md
termux/: readme.md
tmux/: readme.md
uv/: ICT_note.md  readme.md
vim/: readme.md
wsl/: readme.md
zellij/: readme.md
zsh/: readme.md
